--- a/style.css
+++ b/style.css
@@ -2,5 +2,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 *{
-    
+    margin: 0;
+    padding: 0;
+    box-sizing:border-box;
+    text-decoration: none;
+    list-style: none;
+    font-size: 17px;
+    font-family: 'Asap Condensed' ,sans-serif;
+    font-family: 'lato' ,sans-serif;
+    font-family: 'Poppins' ,sans-serif;
+    color: #fff;
+    transition: 0.6s ease-in-out all;
+    outline: none;
 }
