--- a/style.css
+++ b/style.css
@@ -21,4 +21,27 @@
 }
 .container{
     width: 100%;
+    min-height: 100vh;
+    background: #1f1f1f;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2%;
+    gap: 5%;
+    overflow: hidden;
+    position: relative;
+}
+.profile{
+    width: 100%;
+    height: 100%;
+    flex: 25%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    padding: 3% 2%;
+    box-sizing: border-box;
+    border: 0.5px solid #858383;
+    border-radius: 3rem;
+    gap: 30px;
 }
