--- a/style.css
+++ b/style.css
@@ -45,3 +45,18 @@
     border-radius: 3rem;
     gap: 30px;
 }
+.profile .heading{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items: start;
+    height:auto;   
+}
+.profile .heading h6{
+    font-size: 15px;
+    color: #e3e3e3;
+}
+.profile .image{
+    width: 100%;
+    height: 100%;    
+}
