--- a/style.css
+++ b/style.css
@@ -60,3 +60,123 @@
     width: 100%;
     height: 100%;    
 }
+.profile .image imag{
+    width: 100%;
+    border-radius: 3rem;
+}
+.profile h2{
+    font-size: 22px;
+    text-align: center;
+    font-family: 'Gill sans MT', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 300;
+    font-size: 25px;
+    line-height: 35px;
+}
+.profile p{
+    color: #999;
+    font-size:15px;
+}
+.profile .icons{
+    display: flex;
+}
+.profile .icons .icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 5px;
+    border: 2px solid #999;
+    padding: 15px;
+    border-radius: 50%;   
+}
+.profile .icons .icon:hover{
+    color: #999;
+}
+.profile .icons .icon:hover{
+    border: 2px solid var(--primary_color);
+}
+.profile .icons.icon:hover i{
+    color: var(--primary_color)
+}
+.profile button{
+    background: var(--primary_color);
+    width: 100%;
+    padding: 8px;
+    color: #1f1f1f;
+    border-radius: 30px;
+    border: 2px solid var(--primary_color);
+    font-size: 20px;
+}
+.profile button:hover{
+    color: var(--primary_color);
+    background-color: #1f1f1f;
+}
+.profile button:hover i{
+    color: var(--primary_color);
+}
+.profile button i{
+    color: #1f1f1f;
+    margin-right: 5px;
+    font-size: 20px;
+}
+.content{
+    flex: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+    gap: 30px;
+    padding-top: 5%;
+    padding-bottom: 10px;
+    margin: 0 5%;
+}
+.content p{
+    font-size: 14px;
+    border: 1px solid #999;
+    padding: 10px 25px;
+    border: radius 30px;
+    color: #d8d0d0;
+}
+.content h1, .icon h1 span{
+    font-size: 4.7rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 100;
+    line-height: 80px;
+    word-spacing: 10px;
+}
+.content h1 span{
+    color: var(--primary_color);
+}
+.content h4{
+    color: #999;
+    max-width: 500px; 
+}
+.content .image{
+    width: max-content;
+    margin-top: 10px;
+    margin-left: auto;
+    position: relative;
+}
+.content .image img{
+    animation: rotate 5s linear infinite;
+    border: 2px solid #999;
+    padding: 10px;
+    border-radius: 50%;
+    z-index: 1;
+    width: 100%;
+}
+.content .image i{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9;
+    font-size: 30px
+}
+@keyframes rotate{
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
