--- a/style.css
+++ b/style.css
@@ -255,3 +255,42 @@
 .navbar ul li:hover span::before{
     display: block;
 }
+.side-bar{
+    position: relative;
+    right: 0;
+    top: 0;
+    height: 100vh;
+    width: 25%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 30px;
+    flex-direction: column;
+}
+.side-bar h3{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #9e9a9a;
+    font-weight: 300;
+    font-size: 25px;
+}
+.side-bar ul li{
+    margin: 10px 0;
+}
+.side-bar ul li a span{
+    color: #9e9a9a;
+    font-size: 15px;
+}
+.side-bar ul li a i{
+    color: #9e9a9a;
+    font-size: 15px;
+    width: 20px;
+    margin-right: 15px;
+}
+.side-bar .social h3{
+    margin-bottom: 20px;
+}
+.side-bar .social i{
+    font-size: 18px;
+    margin: 0 10px;
+    color: #9e9a9a;
+}
