3 images added, some codes commented.

--- a/style.css
+++ b/style.css
@@ -303,3 +303,38 @@
 .show{
     transform: translateX(0);
 }
+@media(max-width:1100px){
+    .container{
+        flex-direction: column;
+        padding: 5% 7%;
+    }
+    .profile{
+        flex: 100%;
+        padding: 5% 7%;
+    }
+    .profile .heading{
+        margin-top: 10px;
+        flex-direction: column;
+        gap: 20px;
+    }
+    .navbar{
+        position: fixed;
+        top: 7%;
+        right: 7%;
+    }
+    .side-bar{
+        width: 60%;
+    }
+    .navbar-icons{
+        display: none;
+    }
+    .nav-active{
+        box-shadow: var(--primary_color) 0 7px 29px 0;
+    }
+}
+@media (max-width:800px){
+    .content h1,.content h1 span{
+        font-size: 3rem;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif';
+    }    
+}
