--- a/style.css
+++ b/style.css
@@ -14,10 +14,10 @@
     color: #fff;
     transition: 0.6s ease-in-out all;
     outline: none;
+    max-height: 100%;
 }
 :root{
     --primary_color:#28e98c;
-
 }
 .container{
     width: 100%;
@@ -335,6 +335,9 @@
 @media (max-width:800px){
     .content h1,.content h1 span{
         font-size: 3rem;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif';
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-weight: 100;
+        line-height: 80px;
+        word-spacing: 5px;
     }    
 }
