--- a/style.css
+++ b/style.css
@@ -11,10 +11,10 @@
     font-family: 'Asap Condensed' ,sans-serif;
     font-family: 'lato' ,sans-serif;
     font-family: 'Poppins' ,sans-serif;
-    color: #fff;
+    color: #ffcfcf;
     transition: 0.6s ease-in-out all;
     outline: none;
-    max-height: 100%;
+    /* max-height: 80%; */
 }
 :root{
     --primary_color:#28e98c;
@@ -58,9 +58,10 @@
 }
 .profile .image{
     width: 100%;
-    height: 100%;    
+    height: 100%;
+    max-width: 250px;
 }
-.profile .image imag{
+.profile .image img{
     width: 100%;
     border-radius: 3rem;
 }
@@ -136,7 +137,7 @@
     border: radius 30px;
     color: #d8d0d0;
 }
-.content h1, .icon h1 span{
+.content h1,.co h1 span{
     font-size: 4.7rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 100;
@@ -149,7 +150,7 @@
 .content h4{
     color: #999;
     max-width: 500px; 
-}
+/* }
 .content .image{
     width: max-content;
     margin-top: 10px;
@@ -340,4 +341,4 @@
         line-height: 80px;
         word-spacing: 5px;
     }    
-}
+} */
